<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             android:layout_margin="8dp">

    <com.task.flickrimagesearch.view.custom.RoundedCornerImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/dummy"
            android:background="@color/grey"
            app:corner="8dp"
    />

    <TextView
            android:id="@+id/image_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/black_transperent"
            android:singleLine="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:padding="4dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

</android.support.constraint.ConstraintLayout>